fixed dark mode not working
A previous change accidentally deleted the dark mode class from the css page - i readded it

--- a/css/style.css
+++ b/css/style.css
@@ -28,6 +28,9 @@ body{
   font-family: "Bebas Neue", sans-serif;
   max-width: 100%;
 }
+.dark-mode{
+  background-color: var(--clr-DarkGrey);
+}
 .Navbar{
   background-color: var(--clr-DarkGrey);
   height: 120px;
